Event testing integration with power control testing.
* register_event fixture implanted in the tests
* modified event testing to collect results after each test run
* polling the listener now uses the wait_for to speed things up in case of success
* changed the format of the output HTML, events are grouped by tests
* added _wait_for_results_refresh() on places that needed it
* Infra. provider / Add / Validate button fix
* Info text when starting the tests with event testing on to open the desired port in firewall together with the correct command to do it

In previous PR, wait_for was implanted into vm power control in pages/ so this speeds things up too.

--- a/data/templates/event_testing.html
+++ b/data/templates/event_testing.html
@@ -9,8 +9,12 @@
 
     <body>
         <div class="container">
-            <h1>Total <strong>{{ num_events }}</strong> events</h1>
+            <h1>Event testing results</h1>
             <table class="zebra-striped">
+            {% for test_name, registered_events in events.iteritems() %}
+                <tr>
+                    <th colspan="7"><em>{{ test_name }}</em></th>
+                </tr>
                 <tr>
                     <th>Time registered</th>
                     <th>Succeeded?</th>
@@ -20,7 +24,7 @@
                     <th>Object</th>
                     <th>Event</th>
                 </tr>
-                {% for event in events %}
+                {% for event in registered_events %}
                 <tr>
                     <td>{{ event.time_friendly }}</td>
                     <td style="color: {{ event.colour }};">{{ event.success_friendly }}</td>
@@ -31,6 +35,7 @@
                     <td><i>{{ event.event }}</i></td>
                 </tr>
                 {% endfor %}
+            {% endfor %}
             </table>
             <p>
                 <i>If something breaks down, go kill <a href="mailto:mfalesni@redhat.com">mfalesni@redhat.com</a></i>
