--- a/data/templates/base.html
+++ b/data/templates/base.html
@@ -7,8 +7,9 @@
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-        {% block content %}{% endblock %}
         <script src="http://code.jquery.com/jquery.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/{{bootstrap_version}}/js/bootstrap.min.js"></script>
+	{% block scripts %}{% endblock %}
+        {% block content %}{% endblock %}
     </body>
 </html>
