Sort the jstree

--- a/data/templates/test_report.html
+++ b/data/templates/test_report.html
@@ -24,7 +24,7 @@ $().ready(function(){
 
 $(function() {
   $('#container').jstree({
-    "plugins" : [ "search" ],
+    "plugins" : [ "search" , "sort"],
     "search" : {
         "show_only_matches": true,
         "search_leaves_only": true,
