--- a/data/templates/test_report.html
+++ b/data/templates/test_report.html
@@ -75,15 +75,16 @@ $(function() {
         <div class="panel-heading">
             <div class="row">
                 <div class="col-md-10">
-		  Test Navigation<input id="plugins4_q" value="" class="input" style="margin:0em auto 1em auto; display:block; padding:4px; border-radius:4px; border:1px solid silver;" type="text">
+                    Test Navigation
+                    <input id="plugins4_q" value="" class="input" style="margin:0em auto 1em auto; display:block; padding:4px; border-radius:4px; border:1px solid silver;" type="text">
                 </div>
             </div>
         </div>
         <div class="panel-body">
-	  <div id="container">
-	    {{ndata}}
-	  </div>
-	</div>
+      <div id="container">
+          {{ndata}}
+      </div>
+    </div>
     </div>
 
 {% for test in tests %}
@@ -91,109 +92,117 @@ $(function() {
         <div class="panel-heading">
             <div class="row">
                 <div class="col-md-10">
-                    <a id="{{test.name|e}}" href="#{{test.name|e}}"><strong>{{test.name}}</strong></a><br>
-		    {% if test.in_progress %}
-		    <strong>IN PROGRESS...</strong>
-		    {% else %}
-		    <strong>COMPLETE</strong>
-		    {% endif %}
-		    <br>
-		    <strong>Duration:</strong> <em>{{test.duration}}s</em>
-		    {% if test.slaveid %}
-		    <br>
-		    <strong>SLAVE:</strong> <em>{{test.slaveid}}</em>
-		    {% endif %}
+                    <a id="{{test.name|e}}" href="#{{test.name|e}}"><strong>{{test.name}}</strong></a>
+                    <br>
+                    {% if test.in_progress %}
+                        <strong>IN PROGRESS...</strong>
+                    {% else %}
+                        <strong>COMPLETE</strong>
+                    {% endif %}
+                    <br>
+                    <strong>Duration:</strong> <em>{{test.duration}}</em>
+                    {% if test.slaveid %}
+                    <br>
+                    <strong>SLAVE:</strong> <em>{{test.slaveid}}</em>
+                    {% endif %}
                 </div>
-                <div class="col-md-2">Setup
-		    {% if test.outcomes['setup'] %}
-                      {% if test.outcomes['setup'][0] == "passed" %}
-                      <span class="label label-success pull-right">Passed</span>
-                      {% elif test.outcomes['setup'][0] == "failed" %}
-		      <span class="label label-warning pull-right">Failed</span>
-                      {% elif test.outcomes['setup'][0] == "skipped" %}
-                      <span class="label label-danger pull-right">Unknown</span>
-                      {% else %}
-                      <span class="label label-default pull-right">N/A</span>
-                      {% endif %}
+                <div class="col-md-2">
+                    Setup
+                    {% if test.outcomes['setup'] %}
+                        {% if test.outcomes['setup'][0] == "passed" %}
+                            <span class="label label-success pull-right">Passed</span>
+                        {% elif test.outcomes['setup'][0] == "failed" %}
+                            <span class="label label-warning pull-right">Failed</span>
+                        {% elif test.outcomes['setup'][0] == "skipped" %}
+                            <span class="label label-danger pull-right">Unknown</span>
+                        {% else %}
+                            <span class="label label-default pull-right">N/A</span>
+                        {% endif %}
                     {% else %}
-                    <span class="label label-default pull-right">N/A</span>
-                    {% endif %}<br>
-		    Call
+                        <span class="label label-default pull-right">N/A</span>
+                    {% endif %}
+                    <br>
+                    Call
                     {% if test.outcomes['call'] %}
-                      {% if test.outcomes['call'][0] == "passed" %}
-                      <span class="label label-success pull-right">Passed</span>
-		      {% elif test.outcomes['call'][0] == "failed" %}
-		      <span class="label label-warning pull-right">Failed</span>
-                      {% elif test.outcomes['call'][0] == "skipped" %}
-                      <span class="label label-primary pull-right">Skipped</span>
-                      {% else %}
-                      <span class="label label-default pull-right">N/A</span>
-                      {% endif %}
+                        {% if test.outcomes['call'][0] == "passed" %}
+                            <span class="label label-success pull-right">Passed</span>
+                        {% elif test.outcomes['call'][0] == "failed" %}
+                            <span class="label label-warning pull-right">Failed</span>
+                        {% elif test.outcomes['call'][0] == "skipped" %}
+                            <span class="label label-primary pull-right">Skipped</span>
+                        {% else %}
+                            <span class="label label-default pull-right">N/A</span>
+                        {% endif %}
                     {% else %}
-                    <span class="label label-default pull-right">N/A</span>
-                    {% endif %}<br>
-		    Teardown
+                        <span class="label label-default pull-right">N/A</span>
+                    {% endif %}
+                    <br>
+                    Teardown
                     {% if test.outcomes['teardown'] %}
-                      {% if test.outcomes['teardown'][0] == "passed" %}
-                      <span class="label label-success pull-right">Passed</span>
-                      {% elif test.outcomes['teardown'][0] == "failed" %}
-                      <span class="label label-warning pull-right">Failed</span>
-                      {% elif test.outcomes['teardown'][0] == "skipped" %}
-                      <span class="label label-danger pull-right">Unknown</span>
-                      {% else %}
-                      <span class="label label-default pull-right">N/A</span>
-                      {% endif %}
+                        {% if test.outcomes['teardown'][0] == "passed" %}
+                            <span class="label label-success pull-right">Passed</span>
+                        {% elif test.outcomes['teardown'][0] == "failed" %}
+                            <span class="label label-warning pull-right">Failed</span>
+                        {% elif test.outcomes['teardown'][0] == "skipped" %}
+                            <span class="label label-danger pull-right">Unknown</span>
+                        {% else %}
+                            <span class="label label-default pull-right">N/A</span>
+                        {% endif %}
                     {% else %}
-                    <span class="label label-default pull-right">N/A</span>
-                    {% endif %}<br>
-		    Result
-		    {% if test.in_progress %}
-		    <span class="label label-default pull-right">IN PROGRESS</span>
-		    {% else %}
-                      {% if test.outcomes['overall'] == "passed" %}
-                      <span class="label label-success pull-right">PASSED</span>
-		      {% elif test.outcomes['overall'] == "failed" %}
-		      <span class="label label-warning pull-right">FAILED</span>
-		      {% elif test.outcomes['overall'] == "skipped" %}
-                      <span class="label label-primary pull-right">SKIPPED</span>
-		      {% elif test.outcomes['overall'] == "error" %}
-                      <span class="label label-danger pull-right">ERROR</span>
-		      {% elif test.outcomes['overall'] == "xpassed" %}
-                      <span class="label label-danger pull-right">XPASSED</span>
-		      {% elif test.outcomes['overall'] == "xfailed" %}
-                      <span class="label label-success pull-right">XFAILED</span>
-                      {% endif %}
-		    {% endif %}
+                        <span class="label label-default pull-right">N/A</span>
+                    {% endif %}
+                    <br>
+                    Result
+                    {% if test.in_progress %}
+                        <span class="label label-default pull-right">IN PROGRESS</span>
+                    {% else %}
+                        {% if test.outcomes['overall'] == "passed" %}
+                            <span class="label label-success pull-right">PASSED</span>
+                        {% elif test.outcomes['overall'] == "failed" %}
+                            <span class="label label-warning pull-right">FAILED</span>
+                        {% elif test.outcomes['overall'] == "skipped" %}
+                            <span class="label label-primary pull-right">SKIPPED</span>
+                        {% elif test.outcomes['overall'] == "error" %}
+                            <span class="label label-danger pull-right">ERROR</span>
+                        {% elif test.outcomes['overall'] == "xpassed" %}
+                            <span class="label label-danger pull-right">XPASSED</span>
+                        {% elif test.outcomes['overall'] == "xfailed" %}
+                            <span class="label label-success pull-right">XFAILED</span>
+                        {% endif %}
+                    {% endif %}
                 </div>
             </div>
         </div>
         <div class="panel-body">
             <p>{{test.file}}</p>
-	    {% if test.short_tb %}
+            {% if test.short_tb %}
                 <pre class="well">{{test.short_tb}}</pre>
             {% endif %}
             <div>
                 {% if test.screenshot %}
-                <a href="{{test.screenshot}}" class="btn btn-primary" role="button">Screenshot</a>
+                    <a href="{{test.screenshot}}" class="btn btn-primary" role="button">Screenshot</a>
                 {% endif %}
-		{% if test.full_tb %}
-                <a href="{{test.full_tb}}" class="btn btn-success" role="button">Full Traceback</a>
-		{% endif %}
-		{% if test.cfme %}
-                <a href="{{test.cfme}}" class="btn btn-success" role="button">CFME.log</a>
-		{% endif %}
-		{% if test.video %}
-                <a href="{{test.video}}" class="btn btn-success" role="button">Video</a>
-		{% endif %}
-		{% if test.function %}
-		<a href="{{test.function}}" class="btn btn-success" role="button">Function Trace</a>
-		{% endif %}
-    {% if test.emails %}
-    <a href="{{test.emails}}" class="btn btn-success" role="button">Received e-mails</a>
-    {% endif %}
-		{% for file in test.merkyl %}
-		   <a href="{{file}}" class="btn btn-primary" role="button">{{file[file.rfind("/")+1:]}}</a>
-		{% endfor %}
+                {% if test.full_tb %}
+                    <a href="{{test.full_tb}}" class="btn btn-success" role="button">Full Traceback</a>
+                {% endif %}
+                {% if test.cfme %}
+                    <a href="{{test.cfme}}" class="btn btn-success" role="button">CFME.log</a>
+                {% endif %}
+                {% if test.video %}
+                    <a href="{{test.video}}" class="btn btn-success" role="button">Video</a>
+                {% endif %}
+                {% if test.function %}
+                    <a href="{{test.function}}" class="btn btn-success" role="button">Function Trace</a>
+                {% endif %}
+                {% if test.event_testing %}
+                    <a href="{{test.event_testing}}" class="btn btn-success" role="button">Caught events</a>
+                {% endif %}
+                {% if test.emails %}
+                    <a href="{{test.emails}}" class="btn btn-success" role="button">Received e-mails</a>
+                {% endif %}
+                {% for file in test.merkyl %}
+                    <a href="{{file}}" class="btn btn-primary" role="button">{{file[file.rfind("/")+1:]}}</a>
+                {% endfor %}
             </div>
         </div>
     </div>
