--- a/data/templates/base.html
+++ b/data/templates/base.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/{{bootstrap_version}}/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/{{bootstrap_version}}/css/bootstrap.min.css">
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-        <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/{{bootstrap_version}}/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="https://netdna.bootstrapcdn.com/bootstrap/{{bootstrap_version}}/js/bootstrap.min.js"></script>
         {% block scripts %}{% endblock %}
         {% block content %}{% endblock %}
     </body>
