Adding QA Contact into reports
Uses simple heuristics to guess at the QA contact responsible for the
test and reports it. If there are more than one contributors to the
source, the first two are shown along with their relative ownership of
the test.

--- a/data/templates/test_report.html
+++ b/data/templates/test_report.html
@@ -105,6 +105,10 @@ $(function() {
                     <br>
                     <strong>SLAVE:</strong> <em>{{test.slaveid}}</em>
                     {% endif %}
+                    {% if test.qa_contact %}
+                    <br>
+                    <strong>OWNER:</strong> <em>{{test.qa_contact}}</em>
+                    {% endif %}
                 </div>
                 <div class="col-md-2">
                     Setup
