--- a/sprout/appliances/templates/base.html
+++ b/sprout/appliances/templates/base.html
@@ -1,14 +1,25 @@
-<!DOCTYPE html>
+{% load staticfiles %}
+<!--[if IE 8]><html class="ie8"><![endif]-->
+<!--[if IE 9]><html class="ie9"><![endif]-->
+<!--[if gt IE 9]><!-->
 <html lang="en">
+<!--<![endif]-->
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-    <title>{% block title %}{% endblock %}</title>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/patternfly.min.css' %}"/>
+  <script src={% static "js/html5shiv.min.js" %}></script>
+  <script src={% static "js/jquery.min.js" %}></script>
+  <script src={% static "js/bootstrap.min.js" %}></script>
+  <script src={% static "js/bootstrap-select.min.js" %}></script>
+  <script src={% static "js/patternfly.min.js" %}></script>
+  <script type="text/javascript">
     function getMethods(callback)
     {
         $.ajax({
@@ -53,16 +64,124 @@
         }
         return keys;
     }
+
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie != '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = jQuery.trim(cookies[i]);
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    var csrftoken = getCookie('csrftoken');
+
+    function csrfSafeMethod(method) {
+        // these HTTP methods do not require CSRF protection
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+
+    function sameOrigin(url) {
+        // test that a given url is a same-origin URL
+        // url could be relative or scheme relative or absolute
+        var host = document.location.host; // host + port
+        var protocol = document.location.protocol;
+        var sr_origin = '//' + host;
+        var origin = protocol + sr_origin;
+        // Allow absolute or scheme relative URLs to same origin
+        return (url == origin || url.slice(0, origin.length + 1) == origin + '/') ||
+            (url == sr_origin || url.slice(0, sr_origin.length + 1) == sr_origin + '/') ||
+            // or any other URL that isn't scheme relative or absolute i.e relative.
+            !(/^(\/\/|http:|https:).*/.test(url));
+    }
+
+    $.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+            if (!csrfSafeMethod(settings.type) && sameOrigin(settings.url)) {
+                // Send the token to same-origin, relative URLs only.
+                // Send the token only if the method warrants CSRF protection
+                // Using the CSRFToken value acquired earlier
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
     </script>
+  <title>Sprout: {% block title %}{% endblock %}</title>
 </head>
+
 <body>
-        <div class="page-header">
-            <h1>Sprout API</h1>
-        </div>
-    <div class="container" id="content">
-        {% block body %}
-        {% endblock %}
+  <nav class="navbar navbar-inverse navbar-pf" role="navigation">
+    <div class="navbar-header">
+      <img src={% static "img/brand.svg" %} class="navbar-brand">
     </div>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <div class="collapse navbar-collapse navbar-collapse-21">
+      <ul class="nav navbar-nav navbar-primary">
+        <li id="home">
+        
+        <a href="{% url 'appliances.views.index' %}"><span class="glyphicon glyphicon-home"></span></a>
+        </li>
+        <li id="api">
+          <a href="{% url 'appliances.api.jsonapi_doc' %}">API Reference</a>
+        </li>
+        <li id="providers">
+          <a href="{% url 'appliances.views.providers' %}">Providers</a>
+        </li>
+        {% if user.is_authenticated %}
+            <li id="appliances">
+              <a href="{% url 'appliances.views.my_appliances' %}">My Appliances</a>
+            </li>
+            <li id="vms">
+              <a href="{% url 'appliances.views.vms' %}">VM Manager</a>
+            </li>
+            <li id="shepherd">
+              <a href="{% url 'appliances.views.shepherd' %}">Free appliance shepherd</a>
+            </li>
+        {% endif %}
+        {% if user.is_staff %}
+            <li id="admin">
+              <a href="{% url 'admin:index' %}">Admin page</a>
+            </li>
+        {% endif %}
+        </ul>
+        <ul class="nav navbar-nav navbar-utility">
+            {% if hubber_url %}
+            <li>
+                <a href="{{ hubber_url }}" title="Go to Hubber" style="color: #333;">Go to Hubber</a>
+            </li>
+            {% endif %}
+            {% if user.is_authenticated %}
+                <li>
+                    <a href="{% url 'django.contrib.auth.views.password_change' %}?next={{request.path}}" title="Change password" style="color: #333;">Change password</a>
+                </li>
+                <li>
+                    <a href="{% url 'django.contrib.auth.views.logout' %}?next={{request.path}}" title="Logout" style="color: #333;">Logout{% if user.first_name %}, {{ user.first_name }}{% endif %}</a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="{% url 'django.contrib.auth.views.login' %}?next={{request.path}}" title="Login" style="color: #333;">Login</a>
+                </li>
+            {% endif %}
+      </ul>
+    </div>
+  </nav>
+  <p></p>
+  {% if messages %}
+    {% for message in messages %}
+        <div class='alert {% if message.tags %}alert-{{ message.tags }}{% endif %} alert-dismissible fade in'>
+            <button class="close" data-dismiss="alert">×</button>
+            {{ message }}
+        </div>
+    {% endfor %}
+  {% endif %}
+  {% block body %}{% endblock %}
+  {% block body-script %}
+  {% endblock %}
 </body>
 </html>
