Added provider selection in My Appliances

--- a/sprout/appliances/templates/appliances/_dates.html
+++ b/sprout/appliances/templates/appliances/_dates.html
@@ -1,4 +1,4 @@
 <option value="latest">{% if group %}Latest for {{ group.id }}{% else %}Latest{%endif %}</option>
-{% for date, providers in dates %}
-<option value="{{date|date:"Y-m-d"}}">{{ date }}{% if providers %} ({{ providers }}){% endif %}</option>
+{% for date in dates %}
+<option value="{{date|date:"Y-m-d"}}">{{ date }}</option>
 {% endfor %}
