--- a/sprout/appliances/templates/appliances/_versions.html
+++ b/sprout/appliances/templates/appliances/_versions.html
@@ -1,4 +1,4 @@
 <option value="latest">{% if group %}Latest for {{ group.id }}{% else %}Latest{%endif %}</option>
-{% for version, providers in versions %}
-<option value="{{version}}">{{ version }}{% if providers %} ({{ providers }}){% endif %}</option>
+{% for version in versions %}
+<option value="{{version}}">{{ version }}</option>
 {% endfor %}
