--- a/sprout/appliances/templates/appliances/providers.html
+++ b/sprout/appliances/templates/appliances/providers.html
@@ -1,33 +1,35 @@
 {% extends "base.html" %}
 {% block title %}Providers{% endblock %}
 {% block body %}
-<div class="container-fluid">
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <strong>Complete usage statistics</strong>
-        </div>
-        <table class="table table-striped">
-            <thead>
-                <th>User name</th>
-                <th>Number of appliances</th>
-            </thead>
-            <tbody>
-                {% for username, count in complete_usage %}
-                <tr>
-                    <td>{% if request.user.is_superuser %}<a href="{% url 'appliances.views.my_appliances' %}?show={{username}}">{{ username }}</a>{% else %}{{ username }}{% endif %}</td>
-                    <td>{{ count }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <strong>Complete usage statistics</strong>
     </div>
-    <hr>
-    {% for provider in providers %}
-    <div class="panel panel-primary" id="provider-{{ provider.id }}">
-        <!-- Provider data -->
-        <div class="panel-heading">
-            <strong>{{ provider.id }}</strong> - {{ provider.ip_address }}
-        </div>
+    <table class="table table-striped">
+        <thead>
+            <th>User name</th>
+            <th>Number of appliances</th>
+        </thead>
+        <tbody>
+            {% for username, count in complete_usage %}
+            <tr>
+                <td>{% if request.user.is_superuser %}<a href="{% url 'appliances.views.my_appliances' %}?show={{username}}">{{ username }}</a>{% else %}{{ username }}{% endif %}</td>
+                <td>{{ count }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<hr>
+{% for provider in providers %}
+<div class="panel panel-primary" id="provider-{{ provider.id }}">
+    <!-- Provider data -->
+    <div class="panel-heading">
+        <strong>{{ provider.id }}</strong> - {{ provider.ip_address }}
+    </div>
+    <!-- Appliance list -->
+    <div class="panel-body">
+        <h2>Appliance list</h2>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -73,9 +75,7 @@
             </tfoot>
         </table>
         <!-- Provider usage -->
-        <div class="panel-heading">
-            <em>Provider usage (by users) statistics</em>
-        </div>
+        <h2>Provider usage (by users) statistics</h2>
         <table class="table table-striped">
             <thead>
                 <th>User name</th>
@@ -91,9 +91,7 @@
             </tbody>
         </table>
         <!-- Provider managing load -->
-        <div class="panel-heading">
-            <em>Which appliances manage this provider?</em>
-        </div>
+        <h2>Which appliances manage this provider?</h2>
         <table class="table table-striped">
             <thead>
                 <th>Appliance name</th>
@@ -123,6 +121,6 @@
             </tbody>
         </table>
     </div>
-    {% endfor %}
 </div>
+{% endfor %}
 {% endblock %}
