--- a/sprout/appliances/templates/base.html
+++ b/sprout/appliances/templates/base.html
@@ -192,7 +192,9 @@
         </div>
     {% endfor %}
   {% endif %}
-  {% block body %}{% endblock %}
+  <div class="container-fluid">
+    {% block body %}{% endblock %}
+  </div>
   {% block body-script %}
   {% endblock %}
 </body>
