Sprout - Protect from deleting the original templates

--- a/sprout/appliances/templates/appliances/templates.html
+++ b/sprout/appliances/templates/appliances/templates.html
@@ -53,7 +53,7 @@
                     <td>
                         <div class="btn-toolbar" role="toolbar" aria-label="Template operations">
                             <div class="btn-group" role="group" aria-label="">
-                                {% if template.exists %}
+                                {% if template.can_be_deleted %}
                                     <a href="{% url 'appliances.views.delete_template_provider' template.id %}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash"></span> Delete in provider</a>
                                 {% endif %}
                             </div>
