Sprout - fix version detection logic and API doc looks

--- a/sprout/appliances/templates/appliances/apidoc.html
+++ b/sprout/appliances/templates/appliances/apidoc.html
@@ -35,7 +35,7 @@ getMethods(function(data){
         "       <div class='panel-body'>" +
         "           <div>" +
         "               <h4>Description</h4>" +
-        "                   <pre>" + method.docstring + "</pre>" +
+        "                   <span>" + method.docstring + "</span>" +
         "               <h4>Arguments</h4>" +
         "                   <p>" + args + "</p>" +
         "               <h4>Default values</h4>" +
