--- a/sprout/appliances/templates/base.html
+++ b/sprout/appliances/templates/base.html
@@ -113,6 +113,7 @@
         }
     });
     </script>
+    <style type="text/css">{% block custom-style %}{% endblock %}</style>
   <title>Sprout: {% block title %}{% endblock %}</title>
 </head>
 
